--- a/webTestBed45/Web.config
+++ b/webTestBed45/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-webTestBed45-20160414090930.mdf;Initial Catalog=aspnet-webTestBed45-20160414090930;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="EFLibTestBed" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=ASPEntityTestBed;Integrated Security=True;MultipleActiveResultSets=True" />
+  </connectionStrings>  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
