--- a/libTestBed/libTestBed.csproj
+++ b/libTestBed/libTestBed.csproj
@@ -42,6 +42,10 @@
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RefactorThis.GraphDiff, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RefactorThis.GraphDiff.2.0.1\lib\RefactorThis.GraphDiff.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -79,9 +83,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IPeople.cs" />
     <Compile Include="Concrete\EFLibTestBed.cs" />
+    <Compile Include="Concrete\EFPeople.cs" />
     <Compile Include="Entities\AttachmentsView.cs" />
     <Compile Include="Entities\People.cs" />
+    <Compile Include="Migrations\201604141905437_InitialCreate.cs" />
+    <Compile Include="Migrations\201604141905437_InitialCreate.Designer.cs">
+      <DependentUpon>201604141905437_InitialCreate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -89,8 +99,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Abstract\" />
+    <EmbeddedResource Include="Migrations\201604141905437_InitialCreate.resx">
+      <DependentUpon>201604141905437_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
