Got the create database to not reference the attachments, and am now roking on the stored procedures

--- a/libTestBed/libTestBed.csproj
+++ b/libTestBed/libTestBed.csproj
@@ -99,11 +99,13 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201604141905437_InitialCreate.resx">
       <DependentUpon>201604141905437_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
